# rust_demo

./: .gitignore
01_grep/: Cargo.toml
01_grep/src/: lib.rs  main.rs
01_grep/test/: 123.txt
02_cat/: Cargo.toml
02_cat/src/: main.rs
03_move/: Cargo.toml  main.rs
04_update_rs/: Cargo.toml
04_update_rs/src/: main.rs
src/: file_operations.rs  lib.rs  main.rs
test/: 123.txt
